--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             </div>
                             <div>
                                 <button type="submit" class="submit-btn" id="submit-button">Submit</button>
-                                <p class="action-left">3 try left</p>
+                                <p class="action-left"><span id="try-left"> 3</span> try left</p>
                             </div>
                     </div>
                 </div>
@@ -62,6 +62,7 @@
         generatePinBtn.addEventListener('click',function(){
             var generateArea = document.getElementById('generate-area');
             generateArea.value = parseInt(Math.floor(Math.random() * 9000 + 1000));
+            getInput('C');
             });
 
         // Getting input value of Numbers, Backspace & ClearAll button
@@ -91,9 +92,17 @@
                 }
 
                 else{
-                    document.querySelector(".notify-section .wrong").style.display="block";
+                    document.querySelector(".notify-section").style.display="block";
                     document.querySelector(".wrong").style.display ="block";
                     document.querySelector(".right").style.display ="none";
+
+                    var tryLeft = document.getElementById('try-left');
+                    var tryLeftNumber = parseInt(tryLeft.innerText);
+                    if(tryLeftNumber > 0) {
+                        tryLeftNumber = tryLeftNumber - 1;
+                        tryLeft.innerText = tryLeftNumber;
+                    }
+                    
                 }
         });
 
